# officeservice_object_editor

./: bundle.json
client/: BUILD.gn
client/include/: object_editor_client.h  object_editor_client_callback.h  object_editor_manager_proxy.h
client/src/: object_editor_client.cpp  object_editor_client_callback.cpp  object_editor_client_callback_stub.cpp  object_editor_manager_proxy.cpp
common/include/: object_editor_config.h  object_editor_extension_proxy.h  system_utils.h  user_mgr.h
common/src/: object_editor_config.cpp  object_editor_extension_proxy.cpp  object_editor_format.cpp  system_utils.cpp  user_mgr.cpp
database/include/: object_editor_manager_database.h  object_editor_manager_utils.h
database/src/: object_editor_manager_database.cpp  object_editor_manager_resmgr.cpp  object_editor_manager_utils.cpp
document/: BUILD.gn
document/include/: alloctable.h  object_editor_document.h  pole.h  storage.h  stream.h  types.h  utils.h
document/src/: alloctable.cpp  dirtree.cpp  header.cpp  object_editor_document.cpp  pole.cpp  storage.cpp  stream.cpp  utils.cpp
etc/: object_editor_service.cfg
extension_ability/include/: object_editor_client_callback_proxy.h  object_editor_extension_stub.h
extension_ability/src/: object_editor_client_callback_proxy.cpp  object_editor_extension_stub.cpp
frameworks/kits/extension/: BUILD.gn
frameworks/kits/extension/include/: object_editor_extension.h
frameworks/kits/extension/src/: object_editor_extension.cpp  object_editor_extension_context.cpp
frameworks/ndk/: BUILD.gn
frameworks/ndk/include/: native_object_editor_types.h
frameworks/ndk/src/: object_editor_document_capi.cpp  object_editor_extension_capi.cpp  object_editor_native_common.cpp  object_editor_proxy_capi.cpp
interfaces/innerkits/include/: iobject_editor_client_callback.h  iobject_editor_manager.h  iobject_editor_service.h  object_editor_common.h  object_editor_err_code.h
package/include/: object_editor_package.h
package/src/: file_watcher.cpp  object_editor_package.cpp  package_data.cpp
system_ability/: BUILD.gn
system_ability/include/: object_editor_manager_system_ability.h
system_ability/src/: object_editor_client_death_recipient.cpp  object_editor_connection.cpp  object_editor_manager_stub.cpp  object_editor_manager_system_ability.cpp
test/: BUILD.gn
test/fuzztest/frameworks/ndk/proxy/: BUILD.gn
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgetcontentembedformatbyoeidandlocale_fuzzer/: oh_contentembed_getcontentembedformatbyoeidandlocale_fuzzer.cpp
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgetcontentembedinfo_fuzzer/: oh_contentembed_getcontentembedinfo_fuzzer.cpp
test/mock/: mock_hilog.h  mock_object_editor_client.h  mock_object_editor_document.h  mock_object_editor_extension_stub.h  mock_object_editor_manager.h  mock_object_editor_manager_stub.h  mock_object_editor_service.h  stub.h
test/mock/ability_manager_client/: mock_ability_manager_client.h
test/mock/access_token/: mock_access_token_kit.cpp  mock_access_token_kit.h
test/mock/bundle_mgr/: mock_bundle_mgr.h
test/mock/common_event/: mock_common_event_manager.cpp  mock_common_event_manager.h
test/mock/hisysevent/: mock_hisysevent.cpp
test/mock/ipc_skeleton/: mock_ipc_skeleton.cpp  mock_ipc_skeleton.h
test/mock/message_parcel/: mock_message_parcel.cpp
test/mock/rdb/: mock_rdb_store.h
test/mock/resource_manager/: mock_resource_manager.h
test/mock/system_ability/: mock_system_ability_manager.cpp  mock_system_ability_manager.h
test/unittest/: BUILD.gn
test/unittest/client/: BUILD.gn  object_editor_client_callback_stub_test.cpp  object_editor_client_callback_test.cpp  object_editor_client_test.cpp  object_editor_extension_death_recipient_test.cpp  object_editor_manager_proxy_test.cpp
test/unittest/common/: BUILD.gn  object_editor_config_test.cpp  object_editor_extension_proxy_test.cpp  object_editor_format_test.cpp  system_utils_test.cpp  user_mgr_test.cpp  user_utils_test.cpp
test/unittest/database/: BUILD.gn  object_editor_manager_database_test.cpp  object_editor_manager_resmgr_test.cpp  object_editor_manager_utils_test.cpp
test/unittest/document/: BUILD.gn  alloctable_test.cpp  dirtree_test.cpp  header_test.cpp  object_editor_document_test.cpp  pole_test.cpp  storage_test.cpp  stream_test.cpp  utils_test.cpp
test/unittest/extension_ability/: BUILD.gn  object_editor_client_callback_proxy_test.cpp  object_editor_extension_stub_test.cpp
test/unittest/frameworks/: BUILD.gn
test/unittest/frameworks/extension/: BUILD.gn  object_editor_extension_context_test.cpp  object_editor_extension_module_loader_test.cpp  object_editor_extension_test.cpp
test/unittest/frameworks/ndk/: BUILD.gn  object_editor_document_capi_one_test.cpp  object_editor_extension_capi_one_test.cpp  object_editor_proxy_capi_one_test.cpp
test/unittest/package/: BUILD.gn  file_watcher_test.cpp  object_editor_package_test.cpp  package_data_test.cpp
test/unittest/system_ability/: BUILD.gn  object_editor_client_death_recipient_test.cpp  object_editor_connection_test.cpp  object_editor_manager_stub_test.cpp  object_editor_manager_system_ability_test.cpp
test/unittest/utils/: BUILD.gn  object_editor_bms_utils_test.cpp  object_editor_event_manager_test.cpp  object_editor_permission_utils_test.cpp  object_editor_screen_change_receiver_test.cpp
utils/: BUILD.gn
utils/include/dfx/: hilog_object_editor.h
utils/src/: object_editor_permission_utils.cpp
