# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Description: oe service client test build.gn file

import("//build/test.gni")
import("//foundation/officeservice/object_editor/object_editor.gni")

module_out_path = "object_editor/object_editor"

config("client_test_config") {
  include_dirs = [
    "${kits_path}/c",
    "${innerkits_path}/include",
    "${object_editor_path}/common/include",
    "${object_editor_path}/document/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/utils/include/dfx",
    "${object_editor_path}/frameworks/ndk/include",
    "${object_editor_path}/test/mock/",
    "${object_editor_path}/test/mock/message_parcel",
    "${object_editor_path}/system_ability/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/client/src",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
}

ohos_unittest("object_editor_client_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_client_test.cpp",
    "${object_editor_path}/system_ability/src/object_editor_manager_stub.cpp",
  ]

  configs = [
    ":client_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
  ]

external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_manager_proxy_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_manager_proxy_test.cpp",
    "${object_editor_path}/test/mock/message_parcel/mock_message_parcel.cpp",
  ]

  configs = [
    ":client_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_client_callback_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_client_callback_test.cpp",
  ]

  configs = [
    ":client_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_client_callback_stub_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_client_callback_stub_test.cpp",
    "${object_editor_path}/test/mock/message_parcel/mock_message_parcel.cpp",
  ]

  configs = [
    ":client_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_extension_death_recipient_test") {
  module_out_path = module_out_path

  sources = [
    "object_editor_extension_death_recipient_test.cpp",
    "${object_editor_path}/client/src/object_editor_extension_death_recipient.cpp",
  ]

  configs = [
    ":client_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]

  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "private=public",
  ]

  part_name = "object_editor"
  subsystem_name = "officeservice"
}

group("client_unittest") {
  testonly = true

  deps = [
    ":object_editor_client_test",
    ":object_editor_manager_proxy_test",
    ":object_editor_client_callback_test",
    ":object_editor_client_callback_stub_test",
    ":object_editor_extension_death_recipient_test",
  ]
}