# Copyright (c) Huawei Device Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Description: oe service test build.gn file

import("//build/test.gni")
import("//foundation/officeservice/object_editor/object_editor.gni")

config("common_test_config") {
  include_dirs = [
    "${kits_path}/c",
    "${innerkits_path}/include",
    "${object_editor_path}/common/include",
    "${object_editor_path}/document/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/utils/include/dfx",
    "${object_editor_path}/extension_ability/include",
    "${object_editor_path}/frameworks/kits/extension/include",
    "${object_editor_path}/frameworks/ndk/include",
    "${object_editor_path}/test/mock/",
    "${object_editor_path}/test/mock/message_parcel",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
}

ohos_unittest("object_editor_config_test") {
  module_out_path = "object_editor/unittest"
  sources = [
    "object_editor_config_test.cpp",
  ]
  include_dirs = [
    "${object_editor_path}/common/include",
    "${object_editor_path}/interfaces/kits/c/",
    "${object_editor_path}/utils/include/dfx",
  ]
  configs = [
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/system_ability:content_embed_service",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:image_native",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_extension_proxy_test") {
  module_out_path = "object_editor/unittest"
  sources = [
    "object_editor_extension_proxy_test.cpp",
    "${object_editor_path}/test/mock/message_parcel/mock_message_parcel.cpp",
  ]
  configs = [
    ":common_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:image_native",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_format_test") {
  module_out_path = "object_editor/unittest"
  sources = [
    "object_editor_format_test.cpp",
    "${object_editor_path}/test/mock/message_parcel/mock_message_parcel.cpp",
  ]
  configs = [
    ":common_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:image_native",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("system_utils_test") {
  module_out_path = "object_editor/unittest"
  sources = [
    "system_utils_test.cpp",
  ]
  configs = [
    ":common_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:image_native",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("user_mgr_test") {
  module_out_path = "object_editor/unittest"
  sources = [
    "user_mgr_test.cpp",
  ]
  configs = [
    ":common_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/system_ability:content_embed_service",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "image_framework:image_native",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}

group("common_unittest") {
  testonly = true

  deps = [
    ":object_editor_config_test",
    ":object_editor_extension_proxy_test",
    ":object_editor_format_test",
    ":system_utils_test",
    ":user_mgr_test",
  ]
}