# Copyright (c) Huawei Device Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/officeservice/object_editor/object_editor.gni")

config("package_test_config") {
  include_dirs = [
    "${kits_path}/c",
    "${innerkits_path}/include",
    "${object_editor_path}/common/include",
    "${object_editor_path}/document/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/package/include",
    "${object_editor_path}/utils/include/dfx",
    "${object_editor_path}/extension_ability/include",
    "${object_editor_path}/frameworks/kits/extension/include",
    "${object_editor_path}/frameworks/ndk/include",
    "${object_editor_path}/test/mock/",
    "${object_editor_path}/test/mock/message_parcel",
    "${object_editor_path}/test/mock/ability_manager_client",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("package_data_test") {
  module_out_path = "object_editor/unittest"
  sources = [
    "package_data_test.cpp",
    "${object_editor_path}/package/src/package_data.cpp",
    "${object_editor_path}/common/src/system_utils.cpp",
  ]
  include_dirs = [
    "${object_editor_path}/package/include",
    "${object_editor_path}/document/include",
    "${object_editor_path}/common/include",
    "${object_editor_path}/utils/include/dfx",
    "${innerkits_path}/include",
  ]
  configs = [
    ":package_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]
  deps = [
    "${object_editor_path}/document:content_embed_document",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "os_account:os_account_innerkits",
    "ipc:ipc_core",
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("object_editor_package_test") {
  module_out_path = "object_editor/unittest"
  sources = [
    "object_editor_package_test.cpp",
    "${object_editor_path}/client/src/object_editor_client_callback_stub.cpp",
    "${object_editor_path}/test/mock/ability_manager_client/mock_ability_manager_client.cpp",
    "${object_editor_path}/package/src/object_editor_package.cpp",
    "${object_editor_path}/package/src/package_data.cpp",
    "${object_editor_path}/package/src/file_watcher.cpp",
    "${object_editor_path}/common/src/system_utils.cpp",
    "${object_editor_path}/common/src/object_editor_config.cpp",
    "${object_editor_path}/common/src/user_mgr.cpp",
  ]
  include_dirs = [
    "${object_editor_path}/package/include",
    "${object_editor_path}/document/include",
    "${object_editor_path}/common/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/extension_ability/include",
    "${object_editor_path}/system_ability/include",
    "${object_editor_path}/utils/include/dfx",
    "${innerkits_path}/include",
  ]
  configs = [
    ":package_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]
  deps = [
    "${object_editor_path}/document:content_embed_document",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_start_options",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "os_account:os_account_innerkits",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}

ohos_unittest("file_watcher_test") {
  module_out_path = "object_editor/unittest"
  sources = [
    "file_watcher_test.cpp",
    "${object_editor_path}/package/src/file_watcher.cpp",
  ]
  include_dirs = [
    "${object_editor_path}/package/include",
    "${object_editor_path}/utils/include/dfx",
  ]
  configs = [
    ":package_test_config",
    "${object_editor_path}/resources/config/build:coverage_flags",
    "${object_editor_path}/resources/config/build:testcase_flags",
  ]
  external_deps = [
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "os_account:os_account_innerkits",
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}

group("package_unittest") {
  testonly = true

  deps = [
    ":package_data_test",
    ":object_editor_package_test",
    ":file_watcher_test",
  ]
}